--- a/assets/odontograma/index.html
+++ b/assets/odontograma/index.html
@@ -9,59 +9,59 @@
   </head>
   <body></body>
   <div id="odontograma">
-    <div id="odontograma-contenido"><img src="images/plantilla_nuevo10.png" width="800"/>
-      <div class="hallazgos edentulo edentulo-1"></div>
-      <div class="hallazgos edentulo edentulo-2"></div>
-      <div class="hallazgos edentulo edentulo-3"></div>
-      <div class="hallazgos edentulo edentulo-4"></div>
-      <div class="hallazgos edentulo edentulo-5"></div>
-      <div class="hallazgos edentulo edentulo-6"></div>
-      <div class="hallazgos edentulo edentulo-7"></div>
-      <div class="hallazgos edentulo edentulo-8"></div>
-      <div class="hallazgos edentulo edentulo-9"></div>
-      <div class="hallazgos edentulo edentulo-10"></div>
-      <div class="hallazgos edentulo edentulo-11"></div>
-      <div class="hallazgos edentulo edentulo-12"></div>
-      <div class="hallazgos edentulo edentulo-13"></div>
-      <div class="hallazgos edentulo edentulo-14"></div>
-      <div class="hallazgos edentulo edentulo-15"></div>
-      <div class="hallazgos edentulo edentulo-16"></div>
-      <div class="hallazgos edentulo edentulo-17"></div>
-      <div class="hallazgos edentulo edentulo-18"></div>
-      <div class="hallazgos edentulo edentulo-19"></div>
-      <div class="hallazgos edentulo edentulo-20"></div>
-      <div class="hallazgos edentulo edentulo-21"></div>
-      <div class="hallazgos edentulo edentulo-22"></div>
-      <div class="hallazgos edentulo edentulo-23"></div>
-      <div class="hallazgos edentulo edentulo-24"></div>
-      <div class="hallazgos edentulo edentulo-25"></div>
-      <div class="hallazgos edentulo edentulo-26"></div>
-      <div class="hallazgos edentulo edentulo-27"></div>
-      <div class="hallazgos edentulo edentulo-28"></div>
-      <div class="hallazgos edentulo edentulo-29"></div>
-      <div class="hallazgos edentulo edentulo-30"></div>
-      <div class="hallazgos edentulo edentulo-31"></div>
-      <div class="hallazgos edentulo edentulo-32"></div>
-      <div class="hallazgos edentulo edentulo-33"></div>
-      <div class="hallazgos edentulo edentulo-34"></div>
-      <div class="hallazgos edentulo edentulo-35"></div>
-      <div class="hallazgos edentulo edentulo-36"></div>
-      <div class="hallazgos edentulo edentulo-37"></div>
-      <div class="hallazgos edentulo edentulo-38"></div>
-      <div class="hallazgos edentulo edentulo-39"></div>
-      <div class="hallazgos edentulo edentulo-40"></div>
-      <div class="hallazgos edentulo edentulo-41"></div>
-      <div class="hallazgos edentulo edentulo-42"></div>
-      <div class="hallazgos edentulo edentulo-43"></div>
-      <div class="hallazgos edentulo edentulo-44"></div>
-      <div class="hallazgos edentulo edentulo-45"></div>
-      <div class="hallazgos edentulo edentulo-46"></div>
-      <div class="hallazgos edentulo edentulo-47"></div>
-      <div class="hallazgos edentulo edentulo-48"></div>
-      <div class="hallazgos edentulo edentulo-49"></div>
-      <div class="hallazgos edentulo edentulo-50"></div>
-      <div class="hallazgos edentulo edentulo-51"></div>
-      <div class="hallazgos edentulo edentulo-52"></div>
+    <div id="odontograma-contenido"><img src="images/plantilla_nuevo11.png" width="800"/>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-1"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-2"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-3"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-4"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-5"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-6"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-7"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-8"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-9"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-10"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-11"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-12"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-13"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-14"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-15"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-16"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-17"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-18"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-19"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-20"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-21"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-22"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-23"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-24"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-25"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-26"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-27"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-28"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-29"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-30"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-31"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-32"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-33"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-34"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-35"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-36"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-37"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-38"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-39"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-40"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-41"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-42"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-43"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-44"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-45"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-46"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-47"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-48"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-49"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-50"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-51"></div>
+      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-52"></div>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
