--- a/assets/odontograma/index.html
+++ b/assets/odontograma/index.html
@@ -8,60 +8,69 @@
     <link rel="stylesheet" href="css/odontograma.css"/>
   </head>
   <body></body>
+  <!--#dibujar
+  #pieza.categoria-centro
+  	img(src="images/pieza_dos.png", alt="")
+  	.direccionPieza#direccionPieza-arriba.lesionCaries
+  	.direccionPieza#direccionPieza-abajo.lesionCaries
+  	.direccionPieza#direccionPieza-izquierda.lesionCaries
+  	.direccionPieza#direccionPieza-derecha.lesionCaries
+  	.direccionPieza#direccionPieza-centro.lesionCaries
+  -->
   <div id="odontograma">
     <div id="odontograma-contenido"><img src="images/plantilla_nuevo11.png" width="800"/>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-1"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-2"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-3"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-4"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-5"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-6"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-7"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-8"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-9"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-10"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-11"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-12"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-13"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-14"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-15"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-16"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-17"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-18"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-19"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-20"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-21"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-22"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-23"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-24"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-25"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-26"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-27"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-28"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-29"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-30"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-31"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-32"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-33"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-34"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-35"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-36"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-37"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-38"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-39"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-40"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-41"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-42"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-43"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-44"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-45"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-46"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-47"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-48"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-49"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-50"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-51"></div>
-      <div class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-52"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-1"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-2"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-3"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-4"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-5"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-6"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-7"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-8"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-9"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-10"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-11"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-12"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-13"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-14"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-15"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-16"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-17"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-18"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-19"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-20"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-21"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-22"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-23"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-24"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-25"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-26"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-27"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-28"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-29"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-30"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-31"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-32"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-33"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-34"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-35"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-36"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-37"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-38"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-39"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-40"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-41"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-42"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-43"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-44"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-45"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-46"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-47"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-48"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-49"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-50"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-51"></div>
+      <div class="hallazgos lesionCaries direccion-centro direccion-centro-52"></div>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
